fixed overlapping bullet points issue in kyc selfie

--- a/src/app/feature/pages/ddx-kyc/ddx-kyc-selfie/ddx-kyc-selfie.component.scss
+++ b/src/app/feature/pages/ddx-kyc/ddx-kyc-selfie/ddx-kyc-selfie.component.scss
@@ -38,21 +38,23 @@
         li.restrict {
           @extend .body;
 
+          display: flex;
+
           line-height: 18px;
           position: relative;
 
           &:before {
             content: '-';
             display: flex;
-            position: absolute;
-            top: 0;
-            .rtl & {
-              right: -10px;
-            }
+            position: relative;
 
-            .ltr & {
-              left: -10px;
-            }
+            // .rtl & {
+            //   right: -10px;
+            // }
+
+            // .ltr & {
+            //   left: -10px;
+            // }
           }
         }
       }
